2022-11-21T01:20:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3510657707 # 632
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 259 469
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 259 470
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-20]

2022-11-20T08:18:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3507138723 # 630
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 258 468
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 259 469
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-20]

2022-11-19T16:19:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3504245631 # 628
* notice: last 14d: unq all: 2 15
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 258 467
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 258 468
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-19]

2022-11-19T08:18:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3502730725 # 627
* notice: last 14d: unq all: 2 14
* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 257 466
* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 258 467
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-19]

2022-11-19T01:21:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3501420940 # 626