@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-21T01:20:48Z",
+  "timestamp" : "2022-11-21T16:21:05Z",
   "count_outdated" : 453,
   "uniques_outdated" : 250,
-  "count" : 470,
-  "uniques" : 259,
+  "count" : 471,
+  "uniques" : 260,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-11-20T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
