@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 2,
   "clones": [
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-11-20T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-21T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
