@@ -1,3 +1,11 @@
+2022-11-21T16:21:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3516182860 # 634
+* notice: last 14d: unq all: 2 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 250 453 / 259 470
+* notice: next accum: outdated-unq outdated-all / unq all: 250 453 / 260 471
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-21]
+
 2022-11-21T01:20:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3510657707 # 632
 * notice: last 14d: unq all: 2 17
